<resources>
    <string name="app_name">walplay</string>

    <!--PLAYER-->
    <string name="player_btn_pause">暂停</string>
    <string name="player_btn_play">播放</string>
    <string name="player_btn_previousPiece">上一首</string>
    <string name="player_btn_nextPiece">下一首</string>
    <string name="player_btn_playMode">播放模式</string>

    <string name="player_playMode_1">顺序播放</string>
    <string name="player_playMode_2">顺序循环</string>
    <string name="player_playMode_3">单曲循环</string>
    <string name="player_playMode_4">列表循环</string>
    <string name="player_playMode_5">随机播放</string>

    <!--InfoFragment2-->
    <string name="Current_Spot_Name_For_Test">Current_Spot_Name_For_Test</string>
    <string name="Current_Spot_Location_For_Test">Current_Spot_Location_For_Test</string>
    <string name="Current_Spot_More_Info_For_Test">Current_Spot_More_Info_For_Test</string>
    <string name="Current_Spot_Lever_For_Test">AAA</string>
    <string name="Use_Camera">拍照</string>
    <string name="pic_folder_name">walplay_pic</string>


    <!--Login.aty-->
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">请输入密码</string>
    <string name="cellNumber">请输入手机号码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="inputCellNumber">请输入手机号码</string>
    <string name="sendSMSCode">发送短信验证码</string>

    <!-- nav-->
    <string name="userName_notLogged">请先登录</string>


    <!-- testtesttest-->
    <string name="success">success</string>
    <string name="error">error</string>
    <string name="path">wtf</string>
    <string name="fileaddress2">http://222.186.30.212:8082/demo_store/2015/12/13/18130acf26be437ceb9f9e63b5479624.mp3</string>
    <string name="button">开始播放</string>
    <string name="stopbutton">停止播放</string>
    <string name="sdcarderror">sdcarderror</string>

    <string name="outside">您当前处于景区之外</string>
    <string name="inside1">您当前处于景区</string>
    <string name="inside2">之内</string>
    <string name="startSpotPlay">接受推送</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_spot_detail">SpotDetailActivity</string>

</resources>
