<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.ecustcs123.zhh.walplay.PlayerPanelFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/tv_titlePlayingMusic"
            android:layout_above="@+id/linear_player"
            android:text="Title of MusicPiece which is playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/linear_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/player_controlBtns"
            android:orientation="vertical">
            <SeekBar
                android:id="@+id/seekbar_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:focusable="true"
                android:minHeight="10dp"
                android:maxHeight="10dp"
                android:progressDrawable="@drawable/seekbar_styles"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/player_controlBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btn_playerPlayMode"
                android:background="@drawable/glyphicons_roundabout"
                android:text="@string/player_btn_playMode"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:clickable="true" />
            <ImageButton
                android:id="@+id/btn_playerPreviousPiece"
                android:text="@string/player_btn_previousPiece"
                android:background="@drawable/glyphicons_step_backward"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                />
            <ImageButton
                android:id="@+id/btn_playerPlayMusic"
                android:text="@string/player_btn_pause"
                android:background="@drawable/glyphicons_pause"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                />
            <ImageButton
                android:id="@+id/btn_playerNextPiece"
                android:text="@string/player_btn_nextPiece"
                android:background="@drawable/glyphicons_step_forward"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
