<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PlayerPageLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ecustcs123.zhh.walplay.PlayerActivity">

    <ListView
        android:id="@+id/lv_musiclistview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_titlePlayingMusic"
            android:layout_above="@+id/linear_player"
            android:text="Title of MusicPiece which is playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/linear_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/player_controlBtns"
            android:orientation="vertical">
            <SeekBar
                android:id="@+id/seekbar_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:focusable="true"
                android:minHeight="10dp"
                android:maxHeight="10dp"
                android:progressDrawable="@drawable/seekbar_styles"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:id="@+id/player_controlBtns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_playerPlayMode"
                android:text="@string/player_btn_playMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/btn_playerPreviousPiece"
                android:text="@string/player_btn_previousPiece"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_playerPlayMusic"
                android:text="@string/player_btn_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_playerNextPiece"
                android:text="@string/player_btn_nextPiece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>



</RelativeLayout>
