<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.ecustcs123.zhh.walplay.SpotDetailActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">

            <TextView
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Current_Spot_Name_For_Test"
                android:textStyle="bold"
                android:id="@+id/textView2" />

            <edu.ecustcs123.zhh.walplay.MarqueeTextView
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Current_Spot_Location_For_Test"
                android:id="@+id/textView3"
                android:textStyle="italic"/>
        </LinearLayout>

        <TextView
            android:singleLine="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Current_Spot_Lever_For_Test"
            android:id="@+id/SpotLever"
            android:layout_weight="1"/>

    </LinearLayout>

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabHost"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="50dp"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="269dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/CurrentSpotPic"
                        android:background="@drawable/spotpic4test"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/CurrentSpotCommentList"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/CurrentSpotOtherInfo"
                        android:text="@string/Current_Spot_OtherInfo"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/fragmentContainer_controlPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        ></LinearLayout>

</LinearLayout>
